# a2vme

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
MWPC_slow_control/: URL.txt
MWPC_slow_control/scripts/: MWPCSlowControlTransmitter.sh  awkLines.txt  awkLines2.txt  getfile.sh
Moeller/: CMakeLists.txt
Moeller/src/: CMakeLists.txt  MoellerCalibration.h  MoellerCalibration450_20101004.h  MoellerCalibration450_20110214.h  MoellerRoot.h  MoellerVMEReadout.c  MoellerVMEReadoutScaler.c
PairSpectrometer/: CMakeLists.txt  README
PairSpectrometer/src/: VMEReadoutScaler_PairSpec.c
TAPS/: CMakeLists.txt
TAPS/src/: TAPSScalers.c  TAPSUserScaler.c  TAPSVMEReadoutScaler.c
cb_disc/: CMakeLists.txt
cb_disc/src/: dsm.h  lpm98.cc  lpm98.h  prog_pm98.cc  set_pm98.cc  vme++.cc  vme++.h
cmake/: settings.cmake
flash/: CMakeLists.txt
flash/scripts/: ClearScaler.sh  ReProgram.sh  ReStart.sh  vmeext2x.sh
flash/src/: CMakeLists.txt  playxsvf.c  ports.c  ports.h  vuprom.c  vuprom2.c  vuprom3.c
gesica_sadc/: CMakeLists.txt
gesica_sadc/igor/: i2c.c  read_adc_id_all.c
gesica_sadc/src/: gesica.cpp  program_gesica.cpp  program_sadc.cpp  sadc_test.cpp
moellerandmore/: CMakeLists.txt
moellerandmore/src/: CheckRAM.c  ConfigureRAM.c  EmulateVMECPU.c  OsziVMEReadout.c  OsziVMEReadout2.c
moellerandmore_experiment_control/: CMakeLists.txt
moellerandmore_experiment_control/src/: CMakeLists.txt  CMakeLists.txt~  SCVMEReadoutScaler_moeller.c
sadc_test/: CMakeLists.txt
sadc_test/igor/: i2c.h  set_adc_id_all.c  vmemapper.h
sadc_test/src/: gesica_lib.cpp  gesica_lib.h  program_gesica.cpp  program_sadc.cpp  sadc_test.c  sadc_test.cpp
taps_experiment_control/: CMakeLists.txt
taps_experiment_control/scripts/: CBSlowControlTransmitter.sh  RunSlowControl.sh  SubmitDataIntoDB.sh  awkLines.txt  start.sh
taps_experiment_control/src/: CMakeLists.txt  SCVMEReadoutScaler.c  SCVMEReadoutScaler_taps.c
vitec/: CMakeLists.txt
vitec/src/: vitec_test.c
vitek_test/: CMakeLists.txt
vitek_test/src/: vitek_test.c
vmebus/: CMakeLists.txt
vmebus/scripts/: checkbuserror.sh  read_buserror_register.sh  read_status_register.sh  reset_buserror.sh  show_temp_throtteling_freebsd.sh  vmeext.sh  vmeext1x.sh  vmeext2x.sh  xx
vmebus/src/: CMakeLists.txt  eltec_ram.c  mem.c  vmebus.c  vmebus.h  vmeext.c  vmesio.c  vmestd16.c  vmestd32.c
